--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,13 @@
 {
     "require-dev": {
         "phpunit/phpunit": "^9.5"
+    },
+
+    "autoload": {
+        "psr-4": {
+            "Tests\\": "tests/"
+        },
+        "classmap": ["solutions/"]
     }
 
 }
